--- a/GitHubGists/gistapi.html
+++ b/GitHubGists/gistapi.html
@@ -3,46 +3,16 @@
 <head>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <script src="bs/jquery-3.1.0.js" type="text/javascript">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js">
     </script>
-    <link href="bs/css/bootstrap.css" rel="stylesheet" type="text/css">
-    <script src="bs/js/bootstarp.js" type="text/javascript">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
     </script>
-    <title></title>
+    <script src="gist.js">
+    </script>
+    <title>Github Gists</title>
 </head>
 <body style="background-color:">
-    <script>
-    $(document).ready(function(){
-       var url="https://api.github.com/gists/public?page=1&per_page=30";
-       $.getJSON(url,function(data){
-       var date=new Array();
-       for(var i=0;i<30;i++)
-       {
-           var dt=data[i]['updated_at'];
-           var mm=dt[5]+dt[6];
-           var yy=dt[0]+dt[1]+dt[2]+dt[3];
-           var dd=dt[8]+dt[9];
-           date[i]=dd+"/"+mm+"/"+yy;
-
-           var owner_login="NA";
-           var des=data[i]['description'];
-           if(data[i].hasOwnProperty('owner'))
-           {
-               owner_login=data[i]['owner']['login'];
-           }
-           if(des==null || des=="")
-           {
-             des="No Description";
-           }
-           $("#found1").append("<tr class='Entries'><td width='25%'>"+owner_login+"<\/td><td width='35%'>"+des+"<\/td><td width='20%'>"+date[i]+"<\/td><td width='20%'><a target='_blank' href='"+data[i]['url']+"'>Link<\/a><\/td><\/tr>");
-       }
-
-       });
-
-
-
-    });
-    </script>
     <header>
         <div class="col-sm-offset-2 col-sm-8 col-xs-offset-1 col-xs-10 col-md-offset-3 col-md-6">
             <h2 align="center">Public Gist List of GitHub.</h2>
@@ -52,11 +22,14 @@
         <div class="col-xs-12">
             <div class="row">
                 <div class="col-xs-offset-4 col-xs-8 col-sm-offset-8 col-sm-4">
-                    <label>Search</label> <input class="form-control" id="myInput" type="text">
+                    <label>Search</label> <input class="form-control" id="myInput" type="text"><br>
+                    <button>Click to Fetch Details</button>
+                    <p style="font-style: italic">It displays 30 details each time</p>
                 </div>
             </div><br>
             <div class="row">
                 <div class="table-responsive" id="table_space">
+                    <p class="page">Page No -</p>
                     <table border="1" class="table table-striped table-bordered table-hover table-release" id="myTable" width="100%">
                         <thead style="background-color: #428bca;">
                             <tr>
@@ -73,32 +46,7 @@
             <div class="row"></div>
         </div>
     </div>
-    <script>
-    function filterTable(event) {
-       var filter = event.target.value.toUpperCase();
-       var rows = document.querySelector("#myTable tbody").rows;
-
-       for (var i = 0; i < rows.length; i++) {
-           var firstCol = rows[i].cells[0].textContent.toUpperCase();
-           var secondCol = rows[i].cells[1].textContent.toUpperCase();
-           if (firstCol.indexOf(filter) > -1 || secondCol.indexOf(filter) > -1) {
-               rows[i].style.display = "";
-           } else {
-               rows[i].style.display = "none";
-           }
-       }
-    }
-    document.querySelector('#myInput').addEventListener('keyup', filterTable, false);
-
-    $("#datec").click(function(){
-       $('tr.Entries').each(function() {
-            var t = this.cells[1].textContent.split('/');
-            $(this).data('_ts', new Date(t[2], t[1]-1, t[0]).getTime());
-       }).sort(function (a, b) {
-           return $(a).data('_ts') < $(b).data('_ts');
-       }).appendTo('tbody');
-    })
-
+    <script src="search.js">
     </script>
 </body>
 </html>
