--- a/GitHubGists/gistapi.html
+++ b/GitHubGists/gistapi.html
@@ -15,7 +15,7 @@
 <body style="background-color:">
     <header>
         <div class="col-sm-offset-2 col-sm-8 col-xs-offset-1 col-xs-10 col-md-offset-3 col-md-6">
-            <h2 align="center">Public Gist List of GitHub.</h2>
+            <h2 align="center">Public Gist List of GitHub</h2>
         </div>
     </header>
     <div class="container">
