--- a/GitHubGists/gistapi.html
+++ b/GitHubGists/gistapi.html
@@ -10,6 +10,7 @@
     </script>
     <script src="gist.js">
     </script>
+    <link href="style.css" rel="stylesheet" type="text/css">
     <title>Github Gists</title>
 </head>
 <body style="background-color:">
@@ -47,6 +48,6 @@
         </div>
     </div>
     <script src="search.js">
-    </script>
+    </script> <a class="scrollToTop" href="#">Top</a>
 </body>
 </html>
